<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?actionBarSize"
        android:background="@color/action_bar_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_detail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_detail">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_image_size_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:maxLines="1"
                android:text="@string/image_size_title"
                android:textColor="@color/title_color"
                android:textSize="20sp"
                app:fontFamily="sans-serif-light"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_image_size_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/title_color"
                android:textSize="20sp"
                app:fontFamily="sans-serif-light"
                app:layout_constraintBottom_toBottomOf="@id/tv_image_size_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_image_size_title"
                app:layout_constraintTop_toTopOf="@id/tv_image_size_title" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_image_type_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:maxLines="1"
                android:text="@string/image_type_title"
                android:textColor="@color/title_color"
                android:textSize="20sp"
                app:fontFamily="sans-serif-light"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_image_size_title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_image_type_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/title_color"
                android:textSize="20sp"
                app:fontFamily="sans-serif-light"
                app:layout_constraintBottom_toBottomOf="@id/tv_image_type_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_image_type_title"
                app:layout_constraintTop_toTopOf="@id/tv_image_type_title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_image_tags_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:maxLines="1"
                android:text="@string/image_tags_title"
                android:textColor="@color/title_color"
                android:textSize="20sp"
                app:fontFamily="sans-serif-light"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_image_type_title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_image_tags_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/title_color"
                android:textSize="20sp"
                app:fontFamily="sans-serif-light"
                app:layout_constraintBottom_toBottomOf="@id/tv_image_tags_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_image_tags_title"
                app:layout_constraintTop_toTopOf="@id/tv_image_tags_title" />

            <View
                android:id="@+id/section_line"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="@color/title_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_image_tags_title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_image_user_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:maxLines="1"
                android:text="@string/user_name_title"
                android:textColor="@color/title_color"
                android:textSize="20sp"
                app:fontFamily="sans-serif-light"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/section_line" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_image_user_name_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/title_color"
                android:textSize="20sp"
                app:fontFamily="sans-serif-light"
                app:layout_constraintBottom_toBottomOf="@id/tv_image_user_name_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_image_user_name_title"
                app:layout_constraintTop_toTopOf="@id/tv_image_user_name_title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_image_views_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:maxLines="1"
                android:text="@string/views_count_title"
                android:textColor="@color/title_color"
                android:textSize="20sp"
                app:fontFamily="sans-serif-light"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_image_user_name_title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_image_views_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/title_color"
                android:textSize="20sp"
                app:fontFamily="sans-serif-light"
                app:layout_constraintBottom_toBottomOf="@id/tv_image_views_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_image_views_title"
                app:layout_constraintTop_toTopOf="@id/tv_image_views_title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_image_likes_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:maxLines="1"
                android:text="@string/likes_count_title"
                android:textColor="@color/title_color"
                android:textSize="20sp"
                app:fontFamily="sans-serif-light"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_image_views_title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_image_likes_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/title_color"
                android:textSize="20sp"
                app:fontFamily="sans-serif-light"
                app:layout_constraintBottom_toBottomOf="@id/tv_image_likes_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_image_likes_title"
                app:layout_constraintTop_toTopOf="@id/tv_image_likes_title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_image_comments_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:maxLines="1"
                android:text="@string/comment_count_title"
                android:textColor="@color/title_color"
                android:textSize="20sp"
                app:fontFamily="sans-serif-light"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_image_likes_title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_image_comments_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/title_color"
                android:textSize="20sp"
                app:fontFamily="sans-serif-light"
                app:layout_constraintBottom_toBottomOf="@id/tv_image_comments_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_image_comments_title"
                app:layout_constraintTop_toTopOf="@id/tv_image_comments_title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_image_favorites_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:maxLines="1"
                android:text="@string/favorites_count_title"
                android:textColor="@color/title_color"
                android:textSize="20sp"
                app:fontFamily="sans-serif-light"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_image_comments_title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_image_favorites_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/title_color"
                android:textSize="20sp"
                app:fontFamily="sans-serif-light"
                app:layout_constraintBottom_toBottomOf="@id/tv_image_favorites_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_image_favorites_title"
                app:layout_constraintTop_toTopOf="@id/tv_image_favorites_title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_image_downloads_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:maxLines="1"
                android:text="@string/downloads_count_title"
                android:textColor="@color/title_color"
                android:textSize="20sp"
                app:fontFamily="sans-serif-light"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_image_favorites_title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_image_downloads_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/title_color"
                android:textSize="20sp"
                app:fontFamily="sans-serif-light"
                app:layout_constraintBottom_toBottomOf="@id/tv_image_downloads_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_image_downloads_title"
                app:layout_constraintTop_toTopOf="@id/tv_image_downloads_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_error_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/error_message"
        android:textColor="@color/title_color"
        android:textSize="20sp"
        android:visibility="gone"
        app:fontFamily="sans-serif-medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/center_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>